feat: be able to use the key of a wrap as the uuid; fix: list command wrong apply command
Signed-off-by: Skyslycer <noreply@skyslycer.de>